--- a/index0.html
+++ b/index0.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Respira Aí</title>
+    <link rel="stylesheet" href="static/css/style.css">
   </head>
   <header>
     <nav class="nav-bar">
-        <h1>RESPIRA AÍ</h1>
+      <h1>RESPIRA AÍ</h1>
     </nav>
+    
   </header>
   <body>
-    <div>
-
-    </div>
+    <div></div>
   </body>
 </html>
